some swagger fixed
